include/node/track.h

/**
 * @brief Opaque handle to a track (olive::Track).
 *
 * The handle IS the C++ object pointer; no wrapper is allocated.
 */
typedef struct OakNodeTrack OakNodeTrack;
/**
 * @brief Opaque handle to a per-type track container (olive::TrackList).
 *
 * Borrowed from oaknode_sequence_get_track_list(); invalidated when the
 * owning sequence is destroyed.
 */
typedef struct OakNodeTrackList OakNodeTrackList;
/**
 * @brief Opaque handle to a block (olive::Block), see node/block.h.
 */
typedef struct OakNodeBlock OakNodeBlock;
/**
 * @brief Opaque handle to a sequence (olive::Sequence), see node/sequence.h.
 */
typedef struct OakNodeSequence OakNodeSequence;
/* Re-declared here so track.h is self-contained; see node/node.h. */
typedef struct OakNodeNode OakNodeNode;
/**
 * @brief Borrowed cast from a track handle to its node handle.
 * NULL for NULL.
 */
OakNodeNode *oaknode_track_as_node(OakNodeTrack *track);
/* ---------------------------------------------------------------- Track */

/**
 * @brief Create a track of the given type (OakNodeTrackType value).
 *
 * The caller owns the track until it is added to a track list; a track
 * that was never added must be released with oaknode_track_free().
 *
 * @return Track handle, or NULL on invalid type / allocation failure.
 */
OakNodeTrack *oaknode_track_create(int type);
/**
 * @brief Destroy a track. No-op on NULL.
 *
 * The track must have been removed from its track list first.
 */
void oaknode_track_free(OakNodeTrack *track);
/**
 * @brief Track type (OakNodeTrackType values).
 *
 * @return OAKNODE_OK or OAKNODE_E_INVALID.
 */
int oaknode_track_get_type(OakNodeTrack *track, int *type);
int oaknode_track_set_type(OakNodeTrack *track, int type);
/**
 * @brief Index of the track inside its track list.
 */
int oaknode_track_get_index(OakNodeTrack *track, int *index);
int oaknode_track_set_index(OakNodeTrack *track, int index);
/**
 * @brief Total length of the track (end of the last block).
 */
int oaknode_track_get_length(OakNodeTrack *track, int *numerator,
							 int *denominator);
/**
 * @brief Owning sequence as a borrowed handle (NULL when trackless).
 */
int oaknode_track_get_sequence(OakNodeTrack *track, OakNodeSequence **out);
/* ------------------------------------------------------- Track blocks */

/**
 * @brief Number of blocks on the track.
 */
int oaknode_track_get_block_count(OakNodeTrack *track, int *count);
/**
 * @brief Borrowed handle to the block at `index`.
 *
 * @return OAKNODE_OK, OAKNODE_E_INVALID or OAKNODE_E_NOT_FOUND.
 */
int oaknode_track_get_block_at(OakNodeTrack *track, int index,
							   OakNodeBlock **out);
/**
 * @brief Append/prepend/insert primitives (olive::Track::*_block).
 *
 * The track takes over graph membership of the block; the block must have
 * a valid length before insertion.
 *
 * @return OAKNODE_OK or OAKNODE_E_INVALID.
 */
int oaknode_track_append_block(OakNodeTrack *track, OakNodeBlock *block);
/**
 * @brief Borrowed sequence owning this track list.
 */
int oaknode_tracklist_get_sequence(OakNodeTrackList *list,
								   OakNodeSequence **out);
/**
 * @brief The list's track input id on the parent sequence
 * (e.g. "track_in_0"). Two-stage string getter.
 */
int oaknode_tracklist_get_track_input_id(OakNodeTrackList *list,
										 char *buf, int buf_size);
/**
 * @brief Live input-array append/remove on the parent sequence for this
 * list's track input (TrackList::array_append/array_remove_last()).
 */
int oaknode_tracklist_array_append(OakNodeTrackList *list);
int oaknode_tracklist_array_remove_last(OakNodeTrackList *list);
/**
 * @brief Map a cached track index to the input-array element index
 * (TrackList::get_array_index_from_cache_index()).
 */
int oaknode_tracklist_get_array_index_from_cache_index(
	OakNodeTrackList *list, int cache_index, int *out_index);
int oaknode_tracklist_get_type(OakNodeTrackList *list, int *type);
/**
 * @brief Number of connected tracks.
 */
int oaknode_tracklist_get_track_count(OakNodeTrackList *list, int *count);
/**
 * @brief Borrowed handle to the track at `index`.
 *
 * @return OAKNODE_OK, OAKNODE_E_INVALID or OAKNODE_E_NOT_FOUND.
 */
int oaknode_tracklist_get_track_at(OakNodeTrackList *list, int index,
								   OakNodeTrack **out);
/**
 * @brief Combined length of the longest track in the list.
 */
int oaknode_tracklist_get_total_length(OakNodeTrackList *list, int *numerator,
									   int *denominator);
/**
 * @brief Size of the underlying input array (>= track count; may contain
 * disconnected slots).
 */
int oaknode_tracklist_get_array_size(OakNodeTrackList *list, int *size);
/**
 * @brief Add `track` to the list (non-undoable primitive).
 *
 * Mirrors the graph steps of TimelineAddTrackCommand::redo() minus the
 * auto-merge: the track is parented to the list's graph (when any),
 * inherits the previous track's height, a new array slot is appended and
 * the track is connected to it. The sequence's flat track cache and
 * lengths are refreshed before returning.
 *
 * @return OAKNODE_OK or OAKNODE_E_INVALID.
 */
int oaknode_tracklist_add_track(OakNodeTrackList *list, OakNodeTrack *track);
/**
 * @brief Remove `track` from the list (non-undoable primitive).
 *
 * Disconnects the track from its array slot and removes the slot
 * (Node::input_array_remove). The track is NOT deleted; ownership returns
 * to the caller.
 *
 * @return OAKNODE_OK, OAKNODE_E_INVALID or OAKNODE_E_NOT_FOUND.
 */
int oaknode_tracklist_remove_track(OakNodeTrackList *list,
								   OakNodeTrack *track);