include/node/project.h

/**
 * @file project.h
 * @brief C ABI for olive::Project (oaknode)
 *
 * An OakNodeProject owns its whole node graph: nodes added with
 * oaknode_project_add_node() (directly, or indirectly through the folder and
 * footage families) are deleted by oaknode_project_free(). Handles to nodes,
 * folders and footage obtained from a project are borrowed views and must not
 * be freed.
 *
 * Conventions (shared by all oaknode C API families):
 *   - Return codes: 0 (OAKNODE_OK) on success, a negative OAKNODE_E_* code on
 *     failure.
 *   - String getters are two-stage: pass buf == NULL (or a short buffer) to
 *     query the required size; the return value is the required buffer size in
 *     bytes INCLUDING the terminating NUL. The output is NUL-terminated
 *     whenever buf_size > 0.
 *   - NULL handles yield OAKNODE_E_INVALID (or a no-op for free()).
 *   - Disk save/load of project files is NOT part of this layer; it belongs to
 *     oakstorage (milestone M10).
 */

/**
 * @brief Opaque project handle. Owned by the caller; release with
 * oaknode_project_free().
 */
typedef struct OakNodeProject OakNodeProject;
/**
 * @brief Opaque node handle (defined by the node family; forward-declared
 * here so the headers can be included in any order).
 */
typedef struct OakNodeNode OakNodeNode;
/**
 * @brief Opaque folder handle (defined in node/folder.h; forward-declared
 * here so the headers can be included in any order). Borrowed from the
 * owning project.
 */
typedef struct OakNodeFolder OakNodeFolder;