src/task/rust/src/bridge/node.rs


	// --- folder.h ---
	/// `oaknode_folder_create`.
	pub fn oaknode_folder_create(project: OakNodeProject) -> OakNodeFolder;
	/// `oaknode_folder_child_count`.
	pub fn oaknode_folder_child_count(folder: OakNodeFolder) -> c_int;
	/// `oaknode_folder_child_at`.
	pub fn oaknode_folder_child_at(folder: OakNodeFolder, index: c_int) -> OakNodeNode;
	/// `oaknode_folder_add_child`.
	pub fn oaknode_folder_add_child(folder: OakNodeFolder, child: OakNodeNode) -> c_int;
	/// `oaknode_folder_as_node`.
	pub fn oaknode_folder_as_node(folder: OakNodeFolder) -> OakNodeNode;
	/// `oaknode_command_create_folder_add_child`.
	pub fn oaknode_command_create_folder_add_child(folder: OakNodeFolder, child: OakNodeNode) -> crate::bridge::undo::OakUndoCommand;
	/// `oaknode_folder_remove_child`.
	pub fn oaknode_folder_remove_child(folder: OakNodeFolder, child: OakNodeNode) -> c_int;
	/// `oaknode_folder_move_children`.
	pub fn oaknode_folder_move_children(nodes: *const OakNodeNode, count: c_int, dest_folder: OakNodeFolder) -> c_int;
	/// `oaknode_folder_has_child_recursive`.
	pub fn oaknode_folder_has_child_recursive(folder: OakNodeFolder, child: OakNodeNode) -> c_int;
	/// `oaknode_folder_index_of_child`.
	pub fn oaknode_folder_index_of_child(folder: OakNodeFolder, child: OakNodeNode) -> c_int;
	/// `oaknode_folder_parent_of`.
	pub fn oaknode_folder_parent_of(node: OakNodeNode) -> OakNodeFolder;

	// --- footage.h ---
	/// `oaknode_footage_create`.
	pub fn oaknode_footage_create(project: OakNodeProject, filename: *const c_char) -> OakNodeFootage;
	/// `oaknode_footage_as_node`.
	pub fn oaknode_footage_as_node(footage: OakNodeFootage) -> OakNodeNode;
	/// `oaknode_footage_filename`.
	pub fn oaknode_footage_filename(footage: OakNodeFootage, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_footage_set_filename`.
	pub fn oaknode_footage_set_filename(footage: OakNodeFootage, filename: *const c_char) -> c_int;
	/// `oaknode_footage_is_valid`.
	pub fn oaknode_footage_is_valid(footage: OakNodeFootage) -> c_int;
	/// `oaknode_footage_timestamp`.
	pub fn oaknode_footage_timestamp(footage: OakNodeFootage, out_timestamp: *mut i64) -> c_int;
	/// `oaknode_footage_set_timestamp`.
	pub fn oaknode_footage_set_timestamp(footage: OakNodeFootage, timestamp: i64) -> c_int;
	/// `oaknode_footage_decoder`.
	pub fn oaknode_footage_decoder(footage: OakNodeFootage, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_footage_total_stream_count`.
	pub fn oaknode_footage_total_stream_count(footage: OakNodeFootage) -> c_int;
	/// `oaknode_footage_video_stream_count`.
	pub fn oaknode_footage_video_stream_count(footage: OakNodeFootage) -> c_int;
	/// `oaknode_footage_audio_stream_count`.
	pub fn oaknode_footage_audio_stream_count(footage: OakNodeFootage) -> c_int;
	/// `oaknode_footage_subtitle_stream_count`.
	pub fn oaknode_footage_subtitle_stream_count(footage: OakNodeFootage) -> c_int;
	/// `oaknode_footage_duration`.
	pub fn oaknode_footage_duration(footage: OakNodeFootage, out_numerator: *mut c_int, out_denominator: *mut c_int) -> c_int;
	/// `oaknode_footage_proxy_enabled`.
	pub fn oaknode_footage_proxy_enabled(footage: OakNodeFootage) -> c_int;
	/// `oaknode_footage_set_proxy_enabled`.
	pub fn oaknode_footage_set_proxy_enabled(footage: OakNodeFootage, enabled: c_int) -> c_int;
	/// `oaknode_footage_proxy_path`.
	pub fn oaknode_footage_proxy_path(footage: OakNodeFootage, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_footage_proxy_state`.
	pub fn oaknode_footage_proxy_state(footage: OakNodeFootage) -> c_int;
	/// `oaknode_footage_set_proxy`.
	pub fn oaknode_footage_set_proxy(footage: OakNodeFootage, path: *const c_char, state: c_int, video_stream_index: c_int, preset_version: c_int, enabled: c_int) -> c_int;
	/// `oaknode_footage_clear_proxy`.
	pub fn oaknode_footage_clear_proxy(footage: OakNodeFootage) -> c_int;
	/// `oaknode_footage_get_video_params`.
	pub fn oaknode_footage_get_video_params(footage: OakNodeFootage, index: c_int, out: *mut OakVideoParams) -> c_int;
	/// `oaknode_footage_set_video_params`.
	pub fn oaknode_footage_set_video_params(footage: OakNodeFootage, index: c_int, params: *const OakVideoParams) -> c_int;
	/// `oaknode_footage_get_video_length`.
	pub fn oaknode_footage_get_video_length(footage: OakNodeFootage, out_num: *mut i64, out_den: *mut i64) -> c_int;
	/// `oaknode_footage_set_cancel_atom`.
	pub fn oaknode_footage_set_cancel_atom(footage: OakNodeFootage, atom: OakCancelAtom) -> c_int;

	// --- sequence.h ---
	/// `oaknode_sequence_create`.
	pub fn oaknode_sequence_create() -> OakNodeSequence;
	/// `oaknode_sequence_free`.
	pub fn oaknode_sequence_free(sequence: *mut OakNodeSequence);
	/// `oaknode_sequence_set_default_parameters`.
	pub fn oaknode_sequence_set_default_parameters(sequence: OakNodeSequence) -> c_int;
	/// `oaknode_sequence_as_node`.
	pub fn oaknode_sequence_as_node(sequence: OakNodeSequence) -> OakNodeNode;
	/// `oaknode_sequence_from_node`.
	pub fn oaknode_sequence_from_node(node: OakNodeNode) -> OakNodeSequence;
	/// `oaknode_sequence_get_track_list`.
	pub fn oaknode_sequence_get_track_list(sequence: OakNodeSequence, r#type: c_int, out: *mut OakNodeTrackList) -> c_int;
	/// `oaknode_sequence_get_track_count`.
	pub fn oaknode_sequence_get_track_count(sequence: OakNodeSequence, r#type: c_int, count: *mut c_int) -> c_int;
	/// `oaknode_sequence_get_track_at`.
	pub fn oaknode_sequence_get_track_at(sequence: OakNodeSequence, r#type: c_int, index: c_int, out: *mut OakNodeTrack) -> c_int;
	/// `oaknode_sequence_get_all_track_count`.
	pub fn oaknode_sequence_get_all_track_count(sequence: OakNodeSequence, count: *mut c_int) -> c_int;
	/// `oaknode_sequence_get_all_track_at`.
	pub fn oaknode_sequence_get_all_track_at(sequence: OakNodeSequence, index: c_int, out: *mut OakNodeTrack) -> c_int;
	/// `oaknode_sequence_get_playhead`.
	pub fn oaknode_sequence_get_playhead(sequence: OakNodeSequence, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_sequence_set_playhead`.
	pub fn oaknode_sequence_set_playhead(sequence: OakNodeSequence, numerator: c_int, denominator: c_int) -> c_int;
	/// `oaknode_sequence_get_length`.
	pub fn oaknode_sequence_get_length(sequence: OakNodeSequence, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_sequence_get_video_length`.
	pub fn oaknode_sequence_get_video_length(sequence: OakNodeSequence, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_sequence_get_audio_length`.
	pub fn oaknode_sequence_get_audio_length(sequence: OakNodeSequence, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_sequence_verify_length`.
	pub fn oaknode_sequence_verify_length(sequence: OakNodeSequence) -> c_int;
	/// `oaknode_sequence_get_video_stream_count`.
	pub fn oaknode_sequence_get_video_stream_count(sequence: OakNodeSequence, count: *mut c_int) -> c_int;
	/// `oaknode_sequence_get_audio_stream_count`.
	pub fn oaknode_sequence_get_audio_stream_count(sequence: OakNodeSequence, count: *mut c_int) -> c_int;
	/// `oaknode_sequence_get_video_params`.
	pub fn oaknode_sequence_get_video_params(sequence: OakNodeSequence, index: c_int, out: *mut OakVideoParams) -> c_int;
	/// `oaknode_sequence_set_video_params`.
	pub fn oaknode_sequence_set_video_params(sequence: OakNodeSequence, index: c_int, params: OakVideoParams) -> c_int;
	/// `oaknode_sequence_get_audio_params`.
	pub fn oaknode_sequence_get_audio_params(sequence: OakNodeSequence, index: c_int, out: *mut *const c_void) -> c_int;
	/// `oaknode_sequence_set_audio_params`.
	pub fn oaknode_sequence_set_audio_params(sequence: OakNodeSequence, index: c_int, params: *const c_void) -> c_int;

	// --- track.h ---
	/// `oaknode_track_as_node`.
	pub fn oaknode_track_as_node(track: OakNodeTrack) -> OakNodeNode;
	/// `oaknode_track_create`.
	pub fn oaknode_track_create(r#type: c_int) -> OakNodeTrack;
	/// `oaknode_track_free`.
	pub fn oaknode_track_free(track: *mut OakNodeTrack);
	/// `oaknode_track_get_type`.
	pub fn oaknode_track_get_type(track: OakNodeTrack, r#type: *mut c_int) -> c_int;
	/// `oaknode_track_get_length`.
	pub fn oaknode_track_get_length(track: OakNodeTrack, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_track_get_block_count`.
	pub fn oaknode_track_get_block_count(track: OakNodeTrack, count: *mut c_int) -> c_int;
	/// `oaknode_track_get_block_at` (borrowed handle out).
	pub fn oaknode_track_get_block_at(track: OakNodeTrack, index: c_int, out: *mut OakNodeBlock) -> c_int;
	/// `oaknode_track_append_block`.
	pub fn oaknode_track_append_block(track: OakNodeTrack, block: OakNodeBlock) -> c_int;
	/// `oaknode_track_set_type`.
	pub fn oaknode_track_set_type(track: OakNodeTrack, r#type: c_int) -> c_int;
	/// `oaknode_track_get_index`.
	pub fn oaknode_track_get_index(track: OakNodeTrack, index: *mut c_int) -> c_int;
	/// `oaknode_track_set_index`.
	pub fn oaknode_track_set_index(track: OakNodeTrack, index: c_int) -> c_int;
	/// `oaknode_track_get_sequence`.
	pub fn oaknode_track_get_sequence(track: OakNodeTrack, out: *mut OakNodeSequence) -> c_int;
	/// `oaknode_tracklist_get_sequence`.
	pub fn oaknode_tracklist_get_sequence(list: OakNodeTrackList, out: *mut OakNodeSequence) -> c_int;
	/// `oaknode_tracklist_get_track_input_id`.
	pub fn oaknode_tracklist_get_track_input_id(list: OakNodeTrackList, buf: *mut c_char, buf_size: c_int) -> c_int;
	/// `oaknode_tracklist_array_append`.
	pub fn oaknode_tracklist_array_append(list: OakNodeTrackList) -> c_int;
	/// `oaknode_tracklist_array_remove_last`.
	pub fn oaknode_tracklist_array_remove_last(list: OakNodeTrackList) -> c_int;
	/// `oaknode_tracklist_get_array_index_from_cache_index`.
	pub fn oaknode_tracklist_get_array_index_from_cache_index(list: OakNodeTrackList, cache_index: c_int, out_index: *mut c_int) -> c_int;
	/// `oaknode_tracklist_get_type`.
	pub fn oaknode_tracklist_get_type(list: OakNodeTrackList, r#type: *mut c_int) -> c_int;
	/// `oaknode_tracklist_get_track_count`.
	pub fn oaknode_tracklist_get_track_count(list: OakNodeTrackList, count: *mut c_int) -> c_int;
	/// `oaknode_tracklist_get_track_at`.
	pub fn oaknode_tracklist_get_track_at(list: OakNodeTrackList, index: c_int, out: *mut OakNodeTrack) -> c_int;
	/// `oaknode_tracklist_get_total_length`.
	pub fn oaknode_tracklist_get_total_length(list: OakNodeTrackList, numerator: *mut c_int, denominator: *mut c_int) -> c_int;
	/// `oaknode_tracklist_get_array_size`.
	pub fn oaknode_tracklist_get_array_size(list: OakNodeTrackList, size: *mut c_int) -> c_int;
	/// `oaknode_tracklist_add_track`.
	pub fn oaknode_tracklist_add_track(list: OakNodeTrackList, track: OakNodeTrack) -> c_int;
	/// `oaknode_tracklist_remove_track`.
	pub fn oaknode_tracklist_remove_track(list: OakNodeTrackList, track: OakNodeTrack) -> c_int;

	// --- colormanager.h ---
	/// `oaknode_colormanager_init`.
	pub fn oaknode_colormanager_init(project: OakNodeProject) -> OakNodeColorManager;
	/// `oaknode_colormanager_free`.
	pub fn oaknode_colormanager_free(manager: *mut OakNodeColorManager);
	/// `oaknode_colormanager_wrap_borrowed`.
	pub fn oaknode_colormanager_wrap_borrowed(native_manager: *mut c_void) -> OakNodeColorManager;
	/// `oaknode_colormanager_initialize`.
	pub fn oaknode_colormanager_initialize(manager: OakNodeColorManager) -> c_int;
	/// `oaknode_colormanager_set_up_default_config`.
	pub fn oaknode_colormanager_set_up_default_config() -> c_int;
